--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.FormBox {
+  box-shadow: 4px 4px 16px 4px rgba(25, 25, 112, 0.2);
+  width: fit-content;
+  height: fit-content;
+  padding: 40px 40px;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
   flex-direction: column;
+  gap: 20px;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 10px;
+}
+
+.inputGroup label {
+  width: 70px;
+}
+
+.inputGroup input {
+  height: 30px;
+  border: none;
+  border-radius: 4px;
+  background-color: whitesmoke;
+  padding-inline: 10px;
+}
+
+button {
+  height: 36px;
+  background-color: midnightblue;
   color: white;
+  border: none;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
