--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,18 @@ form {
   width: 70px;
 }
 
-.inputGroup input {
+.inputGroup input, select {
   height: 30px;
   border: none;
   border-radius: 4px;
   background-color: whitesmoke;
   padding-inline: 10px;
+}
+
+.radioGroup {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 button {
